--- a/package.json
+++ b/package.json
@@ -2,9 +2,7 @@
   "name": "instaexpers",
   "version": "1.0.0",
   "main": "main.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "scripts": {},
   "author": "",
   "type": "module",
   "license": "ISC",
@@ -12,5 +10,9 @@
   "dependencies": {
     "playwright": "^1.49.1",
     "puppeteer": "^23.10.4"
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.49.1",
+    "@types/node": "^22.10.2"
   }
 }
